@@ -1,8 +1,6 @@
 pipeline {
     agent any
-    environment {
-      MAVEN_OPTS="--add-opens java.base/java.lang=ALL-UNNAMED"   
-    }    
+      
 
     stages {   
         stage('Build with maven') {
